--- a/Category:Gabayada.mw
+++ b/Category:Gabayada.mw
@@ -763,6 +763,273 @@ Ereyfuryada iyo hordhacyada waxaa habeeyey Shaafici Xasan oo isla markaasna qora
     * Inta uu kashbacay oo kibroo kamman wan weyn yeeshay
     * Yuu niman karaamiyo colba leh kiish ka buuxsadaye
     * Kashib dhaha Islaamoow naftii kii ladnaa gadaye
+*********************************
+Gabay Waxaan Isaga Daayay Oon Goor Isadhaafay
+Dibnahayga Maansada Waxaan Daaha Uga Saaray
+Waxaan Uga Dangaabsaday Murtida Aan Idin Deeqsiiyo
+Danbi Aakhiraan Uga Baqiyo Dabaqa Naarede
+Intaan Dunida Joogaan Is Iri Daacad Ku Ahoowe
+Maan Ahi Damiin Iyo Kuwan Daa’inkood Barrine
+Ninkiise Igu Dirqiyay Haatanaan Dacar Magawsiine
+Wiilyahow Daliishii Murtidaad Daba Maraysaaye
+In Darenki Kaa Lumay Xiskaan Iga Dahsoonayne
+Darbi Aan Dhismayn Baad Is Tiri Daar Ka Dhigo Wayne
+Dabin Lagu Khasaaroobay Baad Wali Dumaysaye
+Shaxdii Aad Doraad Jeexdayoo Duubi Kari Wayday
+Deedama Haday Noqotay Oo La Isku Dagi Wayay
+Dacwadii Qalloocnayd Haddaan Dib Uga Faalooddo
+Gabay Kuu Damiir Xuma Ahoon Cidina Doonaynin
+Gabay Aan Dariiq Iyo Lahayn Dirrito Loo Sheego
+Gabay Daalan Oo Dacatay Oon Lagu Dawoobaynin
+Hadaad Adigu Doog Kiciye Iyo Doogsi Wacan Mooday
+Waa Laga Diqoodaa Tixdii Deelka Ku Xusnayde
+Diiwaankaagu Waa Fool Xunyahay Deegta Kuu Surane
+Dallo Ma Leh Qiyaamaha Ninkii Diradiraala Ahe
+Yaan Laba Docseeg Kaaga Dhicin Dunidda Guudkeeda
+Waan Kula Dar-Daarmaye Ma Rabbo Digashadiinaase
+Haday Doontu Kula Ciirsantahay Leexday Daqalkeedu
+Dalad Looga Boodaa Jirtoo Lagu Dabaashaaye
+Hadba Doc Isu Tuur-Tuurku Waa Kaaga Darayaaye
+Suxulbaa Idiirmiyo Sadaa Igui Damaashaaday
+Addoo Damal Har Wayn Sheegta Iyo Duulka Lagu Faano
+Waa Kuu Dagaagnimo Inaad Dood Ku Bixisaaye
+Nin Kastoo La Duugoo Warmaha Lagu Dagiigahayo
+Ayaga Oo Dagaalami Karo Dunida Qaar Joogo
+Runtii Dayradaas Iyo Ma Rabin Duul Yar Baa Nahaye
+Afartaas Wax La Isuma Dadee Daacad Ma U Sheegay
+Ma Daleeyay Waa Taan Naxwaha Daayay Oo Xiraye
+Dabuubtaan Ka Leeyahay Murtida An Idin Deeqsiiyo
+
+Nin Dar-Daran Inuu Dirto Hello Waa Habayn Dumaye
+Aayadaa Dar Dhaaf Iyo Intaad Dibad Ku Caayaysid
+Nin Daryeelle Ma Ahide Masuul Daw-Daraad Tahaye
+Waad Nagu Danbaabtaye Anagu Daahir Baan Nahaye
+Addaa Daalinoo Aan Ogayn Diintu Say Tiriye
+Dugsigii Naloo Oogay Baa Daaran Waligiise
+Hablihii Dib Laga Guursadaa Doorar Noo Dhalaye
+Reerkii Daalanaa Baa Ku Dagay Deeqsigii Kacay
+Raggan Aad Daraabaysid Baa Darajo Kaa Roone
+Daryeel Laawe Daw Aan Furnayn Damagsadoo Roore
+Ma Danqade Ninkuu Shalay Dafiray Ficil Ku Dooc-Docshe
+Dayn Qabbe Walaalkiis Dulmiye Ceeb La Dulug Leeye
+Dayacane Dabqaad Been U Shidde Dumar U Maansoode
+Durqun Badane Deelqaaf La Nacay Waana Kama Daaalle
+Daw-Dawle Soo Waheday Oo Wax Is Dareensiinin
+Darka Kale Dafiicnimada Iyo Dumarka Guunteeye
+Danbaaburadu Dagalkay Dhigtiyo Dalbta Waynaatay
+Dabinkaa Addaa Dhigay Tolkaa Loogu Dawgalaye
+Geedki Dul Iyo Baar Baxoo Dooga Badan Yeeshay
+Geedkii Daruuraha Gu’ Iyo Dirirku Maasheeyay
+Geedkii Diraac Iyo Ana Araga Doog U Curan Waayay
+Dugsigaaga Geedkii Ahaa Darrintu Kuu Tiilay
+Geedkii Dugaalkiyo Ahaa Daydka Lagu Seexdo
+Adigaa Dilaanshoo U Waray Daalin Iyo Tuuge
+Xididkii U Duugnaa Addaa Daayacaas Badaye
+Dayaxii Iftiimiyo Adaa Damiyay Nuurkiiye
+Adaa Caanihii Daadiyoo Doobigii Rogaye
+Adaa Dayrdhalkii Curatay Iyo Daawad Gawracaye
+Adaa Daanadaas Dhigay Ku Taal Duudka Maxamuude
+Goraygii Cad-Ceedu U Dulyimid Daadshay Ugaxdiisa
+Oo Meel Dul Iyo Jeerin Leey Daafta Uga Leexday
+Oo Soo Damaadaad Tahaye Ha Isku Kay Dadine
+Dayacaad Qabtaah Waa Midaad Daalin Ku Ahayde
+Dur-Dur Baad Ka Guurtiyo Dix Iyo Roobkii Oo Da’aye
+Dul Abaar Ah Baad Sahansatoon Dirir Ku Hoorayne
+Adigoo Daroogaysan Baad Doogsin Roortahaye
+Ninkii Ina Adeerkiis Dilloo Waran U Deelaystay
+Oo Rabay Dumaal Guursi Iyo Daas U Haridiisa
+Hadii Loo Dal-Dalo Waa Kasbaday Dalab Khasaaraade
+Danbas Ha Isku Qarin Kii Rashiid Loo Diraad Tahaye!!
+Hadaad Dawlad Baa La Iga Dhacay Dad Ugu Yeeraysid
+Dal Lagaama Haystee Adaa Ceeb Lasoo Dudaye
+Waddaantii Dadaabku U Go’oo Doolo Lala Aaday
+Oo Dawliskeedii Lumaad Day-Day Leedahaye
+Dalanbaabi Baad Tahay Qalbiga Daamur Kaga Yaalle
+Haddii Aan Dabriyo Weerar Culus Dalal Ku Dooyeeyo
+Oo Wagardhac Dur-Duuranoo Qaadno Dagalkooda
+Daaroodka Yaa Kula Ahaan Daaqad Baa Maqane
+Inkastooy Dunuub Kaa Galleen Idin Dubaaqaysa
+In Kastoo Dagaal Idin Dhexmaray Daakhil Iyo Guudba
+Mareexaanku Duul Kula Dhashiyo Waaba Dariskaaye
+Waxaan Diq Iyo Raad Kuu Lahayn Sii Dawarintoodu
+Adigay Darxuma Kuu Tahaye Daw Ku Heli Maysid
+Afartaas Wax La Isuma Dadee Daacad Ma U Shegay
+Ma Daleeyay Waataan Naxwaha Daahay Oo Xiraye
+Dabuubtaan Ka Leeyahay Murtida An Idin Deeqsiiyo
+
+Haddaan Maanta Daar Adag Nahoo Darac Qaboow Joogno
+Adinkuba Dal Baad Haysateen Maalintaan Dumaye
+Markii Duunyadii iyo la Dhacay Dalawadii Geella
+Waa Taad Dawlad Iyo Maamulkeed Wadda Dalbayseene
+Waa Taad Doorkaad Soo Laabateen Dacar Na Siiseene
+Waa Taad Dabay Iyo Disheen Deeqii Noo Kacaye
+Sidii Awr Naqiisii Da’oo Dooga Lagu Daayay
+Waa Taad Doobta Soo Ridan Jirteen Didisay Uunkiiye
+Waa Taad Dhulbahantoo Dudaday Dacal Istaagteene
+Waa Taad Dacdii Teendha Ballo Naga Digayseene
+Idinkoo Docdiinii Gaboo Daadku Naga Qaaday
+Ma Dubaaxisaan Ma Idin Nirri Waa Na Dubatee
+Doofaar Missaalkiis Miyaan Idinku Daymoonay
+Ma Dayuurad Baan Idin Lahayn Hagari Dayn Weeye
+Boogta Daakhilkeedii Bukiyo Nabar Haduu Doogto
+In Kastoo Dushaas Laga Dhayoo Daawa Laga Raadsho
+Darbad Aan Buskoon Baa Jirtiyo Diif Aan Kaa Harine
+Cali Baalle Dibin Daabyaduu Duhur La Soo Dhoofay
+Darbadiyo Dhibtii Ceel-Cad Baan Dib U Shalaynaaye
+Ninba Doorki Weeyoo Khaliif Diirki Nacasawye
+Daaroodba Waa Wadda Dhashoo Kala Dagsiimooye
+Majeertena Waa Kala Durkoo Dalagba Meel Aadye
+Yaan Cala-Cal Daalkani Ku Badin Ceeb La Dadi Waayay
+Xerradii Diq Iyo Hiil Lahoo Waayo Lagu Deegto
+Xooluhuba Waa U Diga Rogtaan Meesha Dibadaaye
+Hadaad Ciidan Soo Dumankartiin Daaqad Naga Awdda
+Daqalkaaga Jiifsaday Aduu Kuu Dalaalyahaye
+Daan-Daansi Iyo Eed Rag Kale Ha Ugu Door Xuline
+Din Garaadaa Kugu Dhacdiyo Daab Lagu Saaray
+Naftaadaa Daryeel Aadmi Kale Ha U Dar-Daar Warine
+Afartaas Wax La Isuma Dadee Daacad Ma U Sheegay
+Ma Daleeyay Waa Taan Naxwaha Daahay Oo Xirraye
+Dabuubtaan Ka Leeyahay Murtida Aan Idin Deeqsiyo
+
+Hadalkaygu Diig-Diigsi Iyo Ma Ahan Deel Qaafe
+Dar-Daar Warrin Ma Yeelnaan Ku Iri Roobku Waa Di’ine
+Marreexaan Dawaaf Baan Ku Irri Daqarna Gaarsiiye
+Damaashaadka Reer Yurub Kolki Dibada Loo Saaray?
+Dumar Looma Haystee Rag Baa Loo Diyaarsadaye
+Dubayaal Haday Kugu Dhacen Lagugu Daaduunshay
+Dudun & Dameer Joog Haday Wagardhac Daaqayso
+Deegaantii Mudug Tiil Haddaan Geella Lagu Daajin
+Reer Dalal Ugaas Iyo Haduu Doobi Celi Yeeshay
+Inaad Damallo Oogtaan Raboo Lagugu Danshoone
+Ka Dabaakhtamaan Idin Lahaa Dirirta Qaarkede
+Dad Kalood Is Haysaan Ma Jirro Dir & Daaroodde
+Degmo Yaroo Mareexaan Ah Baad Maanta Dirirteene
+Haddaydaan Dirin-Diirtii Ahayn Doogu Ka Idlaaday
+Idinkaa Dad Iyo Maal Ka Badan Diini Iyo Qoyse
+Durba Soo Catawgiinu Waa Xaajo Doqomeede
+Dulqaad Iyo Ninkii Samir Leh Baa Lala Dadaalaaye
+Aqalkiina Dumay Oo Ninkii Dadi Lahaa Seexday
+Dhiigiina Daadanahayoo Diiqalyada Moodid
+Deegaankiina Maqan Oo Rag Kale Wali Ku Daaqahayo
+Runtii Waad Ka Diimoontihiin Dayina Maysaane
+Duulaanka Aan Caabudwaaq Duhurna Gaaraynine
+Oo Cadawga Laga Soo Dadboo Mudug U Doolaalay
+Oo Daassaskii Gubahayiyo Dagalka Reerkiina
+Danta Looga Jeedaa Aniga Iima Daadagine
+Nimanyahow Dabeecada Xunoo Qaarba Dacal Aday
+Duddo Kuma Heshiisaan Intaad Daris Wadaagtaane
+Dirhankiinuba Waa Lacag Hadii La Isku Daro Dhawre
+Isku Duubnidiinuna Ka Wacan Dabacsanaantaane
+Daanyeerka Kama Liisataan Dooxyadaa Shidane
+Duray Aan Buskoon Baad Qabtaan Duq Iyo Wayelle
+Kala Daadsanaan Nacasnimaad Dibad La Jiiftaane
+Waxaad Kaga Daliil Qaadataan Kuu Diiwaan Galine
+Ayadoo Daroor Dhiigu Yahay Mudug Dulleedkeeda
+Ayadoo Ragii Diir U Xigay Sadde Ku Daanshooday
+Waa Kaa Cali Salebaan Dug Yiri Deexdi Bariyeede
+Waa Kuwaas Durbaan Tumanayoon Ficilku Daarayne
+Adigaa Ka Soo Daqaqamoo Diiq Sidiis Ciyaye
+Waxna Maad Dawaynine Tolkaad Kala Dilaysaaye
+Inta Kale Ma Duumay Qabaan Digaytay Reerkiina
+Maxay Uga Dacdoodaan Bahdood Dagalka Loo Qaadye
+Ciisahaad Inuu Soo Durkiyo Dabac Ka Dhawaysid
+Wuxuu Diiranaadaba Haduu Daayay Gacantiisa
+Oo Uu Horay Docdiisana U Gabay Diirki Damashoowye
+Adigaa Daleeshiyo Fadhiya Dayrka Dhaxantaahe
+Waa Kaas Dangiigsaday Cismaan Wadda Dulkoodaase
+Duulaan Ka Soo Kicitimoo Duuban Laga Waaye
+Ka Dareer Dagaalkaad Waddaan Mana Daneeyaane
+Daba Taagta Iyo Adoo Deero La Caweeyay
+Dalcad Dheer Adoo Fuulay Oo Hoos U Dagi Waayay
+Diihaalka Waa Kugu Arkaa Diirnax Laga Waaye
+Cumar Soo Digiigixahayoo Diiran Baan Harrine
+Hadday Doolo Cigalayn Jirreen Dulugle Weeyaane
+Ayadoo Dawaar Lagu Rogoo Lagu Dul Geeraaray
+Dacda Ceel-Cad Bay Yuururaan Dagantidoodiiye
+Dibna Uma Taraysaan Inaad Dulayso Mooyaane
+Waxba Ha U Dinaahyayn Addaa Daacigaas Badaye
+Degmo Kale Ha Joogtiyo Cid Aad Daris Wadaagtaane
+Sidii Duul Walaalaa Sinaan Uma Dakaysaane
+Idinkaa Is Darbeeyoo Is Cunay Sidii Dugaagiiye
+Doogaha Dhexdiinaah Hadaan Daawo Laga Gaarin
+Dulli Kama Baxaysaan Wallee Daa’in Abidkine
+Hadaad Darajadayada Iyo Dooqayaga Waydid
+Duqa Caga Baruur iyo Haddaan Daahir Kula Joogin
+Yaa Kuu Dirays Xiran Cidlaad Dagagafaysaaye
+Yaa Dalabka Kuu Kabahayiyo Diifta Kugu Taalla
+Waad Doorsanteen Bari Hadad Dahab Ahaydeene
+Jaajuus Danguur Iyo Adoo Daadufaa Haraye
+Nin Danqada Ma Nooloo Xarrago Lagu Duraantaaye
+Qalbigaa Darbaal Idin Noqdiyo Dogob Sidiisiiye
+Allaylehe Dufowdoo Xarago Dayse Samankaane
+Waabaan Dawladnomo Haysanaad Da Isku Segteene
+Waxaad Darajo Moodeen Inaad Doc Ula Guurteene
+Dal Daloolada Iyo Ceebahaas Meel Walbaba Daadsan
+Hadiidnaan Dabarin Wacadalaad Daanyo Noqoteene
+Waa Idiin Daciifnimo Waxaad Nagu Duraysaane
+Darbi Lagu Hirtaan Kuu Nihiyo Daafac Aan Jabine
+Mugdaan Idinka Daadihinay Iyo Doh Iyo Meel Baase
+Idin Maanu Dayrine Jinaa Kuu Durbaan Tumaye
+Haddad Tahay Abaalkiis Ka Darre Dan Iyo Xeeshaaye
+Adigaa Dabuubtiyo La Galin Dabaqa Naareede
+Anna Daacadaasaan Ku Helin Diilalyiyo Khayre
+Afartaas Wax La Isuma Dadee Daacad Ma U Sheegay
+Ma Daleeyay Waa Taan Naxwaha Daahay Oo Xiraye
+Dabuubtaan Ka Leyahay Murtida Aan Idin Deeqsiiyo
+
+Haddaad Dalaqyo Noo Haysateen Daafta Lagu Laayay
+Ma Duudsiyo Walaakiis Ninkii Dilay Sidiinaase
+Dayn Iyo Qisaas Tuu Qabaan Ugu Dadaalnaaye
+Diirka Oogadaa Iyo Ragii Jaaha Laga Diiray
+Ragii Daabcadii Kaa Jabtiyo Waranka Loo Daabtay
+Uu-Uulle Dooxiisi Bay Wali Dangiigaane
+Cali-Seed Ma Duugoobin Iyo Dirirki Dheeraaye
+Adigoo Sidaas Noo Dagaan Cidi Ku Daymoone
+Dag-Dagsiinyo Waa U Layn Karnaa Niman Da’doodaahe
+Waxaa Lagu Dabakhayaah Tolnimo Duug Inay Tahaye
+Idinkuna Dufowdoo Xumaad Naga Dalbaysaane
+Nin La Dilay Hadii Laga Samroo Shalay La Soo Dooxay
+Kuwa Dabarka Loo Yeelay Oo Daydka Lagu Gooyay
+Oo Waliba Daab Iyo Ul Iyo Dacayna Loo Raacshay
+Waxa Laba Dibnaha Loogu Xiray Iima Daadagine
+Nimankii Dakanadiina Qabay Kuma Dadaashaane
+Kuwii Idin Dubaakheeyay Baad Daaha Galiseene
+Ma Dagaal Sokeeyaad Rabtaan Diide Samihiiye
+Dulucdiinu Waa Maxay Xumaan Kama Diqootaane
+Diro-Diriyo Reer Hebel Miyaan Waana Laga Daalin
+Dic-Dicse Geeridisii Hadaad Daana Culus Mooday
+In Kastoo Nin Doora Uu Ahaa Uunku Daba Joogay
+Diricyaal Ka Badan Baa Dhintoo Duugta Loo Qodaye
+Nimankaad Dur-Duris Iyo Dhigteen Harradda Duudeeda
+Oo Lagu Dulaaliyo Asagu Wax Isma Doorshaane
+Waxba Kama Duwana Wiilshii Haadku Daw-Dabaye
+Hadii Ay Danaanadu Runtahay Nama Dulaasheene
+Dookhaagu Kuma Siin Kareen Damaca Qaarkiise
+Ha Yeeshee Dakano Waa Midaan Daynin Waligeede
+Nimankii Darmane Ereg Qaboo Uuska Kaga Daashay
+Dagaalkaasi Waa Noo Taxnaa Boqol Diraacoode
+Daba Rogoto Waa Tay Qabaeen Daqaro Waa Wayne
+Qoraxeey Dil-Dilihii Ku Dhacay Kama Dawoobaane
+Darandoori Baa Noo Dhexiyo Dab Iyo Baaruude
+Axmed Dabadi Doorkii Ma Furan Faarax Diinigaye
+Doqon Howda Daaduuf Ma Lahan Daaduf Iyo Liide
+Niman Diirarmaha Qaatay Oo Diilal Yiyo Xoog Leh
+Oo Wada Daraawiish Ahoo Duuban Baan Tubane
+Daqiiqadana Way Aarsadaan Daa’in Abidkoode
+Waxa Doolo Lagu Joogo Waa Diricyadoodaase
+Darmaanrtii Bartille Way Ogtahay Deeqda Reer Quruxe
+Dumaal Iyo Xarrago Haatanaa Lala Dul Joogaaye
+Wiilkuna Dirkiis Waa Yaqaan Duray Awoowgiise
+Duntigiisa Waa Garanayaah Diiran Oo Wacane
+Waxba Diririg Iyo Sheeko Kale Ha Igu Dow-Dabine
+Duufaan Adaa Yuurariyo Diiro Daacsade
+Adigaa Daluun Iyo Ku Dhacay Doh Iyo Haadaane
+Hadii Deegta Lagu Fuushanyahay Sidii Dameer Muun Ah
+Oo Adan Ka Diirayn Inaad Dabacdo Mooyaane
+Degma Reer Qalloocana Miyaad Dadab Gal Waydiisan
+Miyay Kuu Dabaal Dagin Intay Aqalo Kuu Daahdo
+Ma Dad Aad La Xididaad Ka Helin Dunidda Guudkeeda
+Ma Dad Aad Laxididaad Ka Helin Dunida Guudkeeda
 
 =='''Salaan carrabey'''==
 
