*Empty MediaWiki Message*

--- a/Mustaxiil.mw
+++ b/Mustaxiil.mw
@@ -1,3 +1,5 @@
 Waa magaalo ku taalla xadka Soomaaliya iyo Itoobiya, oo ka mid ah magaalooyinka ugu da'da weyn ee ay Soomaalidu dagto. Waxaa magaaladaasi ay 90km u jirtaa magaalada B/weyne oo dhanka Soomaaliya ah.
-
+magalada mustaxiil waxaa  hoos imada  tuuloyin faradan.
+waa magaalo aad u qeyrat badan waxaa dhexmaro wabiga shabeele.
+magalada waxaa dago qabiilka  la yirahdo jidle qumahadle
 {{gumud}}
