*Empty MediaWiki Message*

--- a/Mustaxiil.mw
+++ b/Mustaxiil.mw
@@ -1,5 +1,16 @@
 Waa magaalo ku taalla xadka Soomaaliya iyo Itoobiya, oo ka mid ah magaalooyinka ugu da'da weyn ee ay Soomaalidu dagto. Waxaa magaaladaasi ay 90km u jirtaa magaalada B/weyne oo dhanka Soomaaliya ah.
 magalada mustaxiil waxaa  hoos imada  tuuloyin faradan.
 waa magaalo aad u qeyrat badan waxaa dhexmaro wabiga shabeele.
-magalada waxaa dago qabiilka  la yirahdo jidle qumahadle
-{{gumud}}
+magalada waxaa dago qabiilkala la yiraadhdo jidle.Magaalada Mustaxiil oo aan aad uga fogayn Feer-Feer ama u dhaxaysa Magaalada Qalaafe iyo Feer-Feer. Sidoo kale Mustaxiil waxay ka tirsan tahay Gobalka Godey waana magaalo nasiib u yeelatay inuu maro Webiga dheer ee Shabeelle. Juqraafi ahaan waxay dhacaysaa Koonfur-Bari markii aad joogto Godey ama Qalaafe.
+
+Waxaa kalo magaalada mara jid cadaha weyn ee jayga ah ee magaalooyinka deegaanka intooda badan dhex mara, sida aad wadada jayga u hayso waxaad gaadhi buundada quruxda badan ee sida fiican loo dhisay, isla markaasba waxaad hoos ugu fooraar sani Magaalaaa qadiimka ah ee Mustaxiil oo qiyaatee caasimada Ogaadeeniya (Godey) ujirta 180km kana xigta dhinaca Koonfur-Bari aadna uguma soo fogo xuduudka soomaaliya oo dadka ganacsatada ah dhaqdhaqaaqoodu inta badan ku xiran yahay.
+
+Magaaalada Mustaxiil ayaa dadkeedu beeraley iyo xoolo dhaqato yihiin intooda badan, sida magaaloyinka kale ee webiga shabeelle maro waxay leedahay dhul beereed aad u wacan oo hadii si fiican loo maal geliyo dabooli lahaa baahi badan oo hadda kajirta deegaanka maagalada hoos yimaada. 
+
+Hase yeeshee ganacsiga kajira magaalada Mustaxiil ayaan ahaayn sida degmooyinka kale aad buuna uga hooseeyaa marka loo fiiriyo Qalaafe iyo Feer-Feer oo labaduba kaga horeeya adeega bulshada iyo dhaqdhaqaaqa ganacsigaba. Laakiin degmadu waxay leedahay oo si buuxdana uga shaqeeya xafiisyadii dawladda ee heer degmo oo qayb kastaba leh, sidoo kalena waxay leedahay Schoollo, Xarun caafimaad, Saldhig Boolis, Isgaarsiin casri ah iyo quwad koronto oo shaqeysa lix saacadood.
+
+Magaalada Mustaxiil ayaa waxaa kala qaybiya webiga waxayna leedahay buundo la isaga gudbo oo ay isaga kala gooshaan dadweynaha kunool labada dhinac ee magaalada. Inta badan xiliga roobabka badan ay da,aan waxaa magaalada kusoo fataha webiga oo inta badangodoon kadhiga dadweynaha kudhaqan magaalada.
+
+Magaalada Mustaxiil waxay xuduud la leedahay Feer-Feer, Qalaafe iyo xaduudka Soomaaliya. Dhinaca jidadka waxaa soogasha sadex wado oo kakala yimaada dhinaca Godey/Qalaafe, dhinaca feer-feer iyo dhinaca farlibaax Soomaaliya. Waxay magaaladu caan ku tahay buurta dheer ee (Burdheedi), waxaa kale oo kiliilka looga yaqaanaa inay tahay Mustaxiil magaalada kaliya ee aan mudo dheer la badalin Gudoomiyaheeda.
+
+Qore: cali maxamad nuur
