روبوت  تعديل: [[bar:Kategorie:Sprache]]

--- a/Category:Afafka.mw
+++ b/Category:Afafka.mw
@@ -14,7 +14,7 @@ Boggan waxaa lagu soo qaadan doonnaa luuqaddaha kala duwan ee aduunka looga hadl
 [[ast:Categoría:Llingües]]
 [[ay:Categoría:Aru]]
 [[az:Kateqoriya:Dillər]]
-[[bar:Kategorie:Sproch]]
+[[bar:Kategorie:Sprache]]
 [[bat-smg:Kateguorėjė:Kalbas]]
 [[bcl:Kategorya:Mga tataramon]]
 [[be:Катэгорыя:Мовы]]
