Template:Isticmaale Wakhti waxay kuu sheegeysaa wakhtiga ((Isticmaale Wakhti)) hadii aad qortid

--- a/Template:Isticmaale_Wakhti.mw
+++ b/Template:Isticmaale_Wakhti.mw
@@ -5,5 +5,5 @@
 |}</div>
 
 <noinclude>
-dsfdsf kdjsf hdsk dskjfkdsfgsdfjdsfgkjdsfh dshfkdsjf
+Hadii aad dooneysid in aad isticmaasho Template-kan waxaad qortaa ''' <tt><nowiki>{{Isticmaale Wakhti}} </nowiki></tt>'''. waxa aad bogaaga ku arki doontaa wakhtiga sida aad bogaan ugu arkeysid oo kale.
 </noinclude>
