--- a/Template:Isticmaale_Taariikh.mw
+++ b/Template:Isticmaale_Taariikh.mw
@@ -5,3 +5,7 @@
 <div style="width: 100%;"> {{CURRENTMONTHNAME}} <br> {{CURRENTYEAR}}</div>
 <div style="color: #000;border-top:solid black 1px;border-bottom:solid black 1px;">'''{{CURRENTTIME}}''' UTC</div>
 |}
+
+<noinclude>
+Hadii aad dooneysid in aad isticmaasho Template-kan waxaad qortaa ''' <tt><nowiki>{{Isticmaale Taariikh}} </nowiki></tt>'''. waxa aad bogaaga ku arki doontaa Taariikhda maanta iyo Wakhtiga sida aad bogaan ugu arkeysid oo kale.
+</noinclude>
