/* Qabiilka Tigreega iyo Deegaankiisa */

--- a/Meles_Zenawi.mw
+++ b/Meles_Zenawi.mw
@@ -55,6 +55,7 @@ Waxaa lagu tilmaamaa  in xukunkiisu yahay  mid ah Dektaariyad  Qabyaalad ku dhis
 ==Qabiilka Tigreega iyo Deegaankiisa==
 
 Gobolka oaer r KHFVAHLK V VKABVA  AFHIH8Y
+MOMOOAS OJodU udU KDSHCHHCCBbihIH DSBJJBgdGG WQT64165696
 
 ==Gobolka Soomaalida ee Ethiopianku Xukumaan==
 
