*Empty MediaWiki Message*

--- a/Meles_Zenawi.mw
+++ b/Meles_Zenawi.mw
@@ -54,8 +54,11 @@ Waxaa lagu tilmaamaa  in xukunkiisu yahay  mid ah Dektaariyad  Qabyaalad ku dhis
 
 ==Qabiilka Tigreega iyo Deegaankiisa==
 
-Gobolka oaer r KHFVAHLK V VKABVA  AFHIH8Y
-MOMOOAS OJodU udU KDSHCHHCCBbihIH DSBJJBgdGG WQT64165696
+Gobolka Tigeegu waxaa weeye gobolka labaad ee ugu yar dalka Ethiopia waxaana uu ku yaalaa  gobolkoodu  dhanka waqooyi ee dalka itoobiya waxaana  dhanka  waqooyi waxaa ka xiga dalka erteria, dhanka galbeed waxaa ka xiga dalka Sudan dhanka bariga waxaa ka xiga deegaanka Canfarta koonfurta waa Axmaarada, 
+
+Tirada Qabiilkaasi waxaa lagu sheegaa in ay tahay 4 millyon oo kaliya waxayna isugu jiraan Masiixiyiin Xag jir ah (Orthodex) kuwaasi oo qabiilka u badan oo uu ka mid yahayba Raisuul wasaaraha waxayna intooda badan ku xiran yihiin  '(Ethiopian Orthodox Tewahedo Church') 65%. waa Orthodex.
+
+Dhanka kale Musliinta ma ka barna qabiilkaasi maadaama dadka markii la abuurayay EEBE u kala abuuray dad wanaagsan iyo kuwa lid ku ah islaamku ma yara waana mahad eebe inoo yahay mid sii kobcayo waxayna gaaraysaa 35% Muslimiin Alahu suna ah. 
 
 ==Gobolka Soomaalida ee Ethiopianku Xukumaan==
 
