*Empty MediaWiki Message*

--- a/Taariikhda_Gabayada.mw
+++ b/Taariikhda_Gabayada.mw
@@ -477,3 +477,5 @@ Noo soo ducee waxaad ahayd, sharaf ku doondoone!
 [45] Cananno = beeyo
 [46] Sarreeye Guuto Cabdullaahi Shiikh Maxamuud Xasan, Taliyihii Ciidanka Booliska Soomaaliya (1974-78).
 Ereyfuryada iyo hordhacyada waxaa habeeyey Shaafici Xasan oo isla markaasna qoray labada gabay.
+
+[[Category:Gabayada]]
