*Empty MediaWiki Message*

--- a/Ingriis.mw
+++ b/Ingriis.mw
@@ -2,7 +2,7 @@
 
 [[Image:Palace of Westminster eye.jpg|thumb|300px|[[London]]]]
 
-[[London]] waa magaalo-madaxda dalka Ingriis.
+[[London]] waa magaalo-madaxda dalka Ingriis. waxaa lagu qiyasaa dadka ku nool magaalada London 25Milyan oo qof, magaalo madaxda labaad ee ingriisku waa Bergham, waxaa kale oo ka mid ah Manchester
 
 [[Category:Wadamada Yurub]]
 
