روبوت  إضافة: [[ky:Category:Ислам]]

--- a/Category:Islaam.mw
+++ b/Category:Islaam.mw
@@ -31,7 +31,7 @@
 [[hu:Kategória:Iszlám]]
 [[ia:Categoria:Islam]]
 [[id:Kategori:Islam]]
-[[io:Category:Islamo]]
+[[io:Kategorio:Islamo]]
 [[is:Flokkur:Íslam]]
 [[it:Categoria:Islam]]
 [[ja:Category:イスラム教]]
@@ -39,9 +39,10 @@
 [[kk:Санат:Ислам]]
 [[ko:분류:이슬람교]]
 [[ku:Kategorî:Îslam]]
+[[ky:Category:Ислам]]
 [[la:Categoria:Religio Islamica]]
-[[lb:Category:Islam]]
-[[lbe:Category:Ислам]]
+[[lb:Kategorie:Islam]]
+[[lbe:Категория:Ислам]]
 [[lt:Kategorija:Islamas]]
 [[lv:Kategorija:Islāms]]
 [[mk:Категорија:Ислам]]
