--- a/Mustaxiil.mw
+++ b/Mustaxiil.mw
@@ -1,7 +1,7 @@
 Waa magaalo ku taalla xadka [[Soomaaliya]] iyo [[Itoobiya]], oo ka mid ah magaalooyinka ugu da'da weyn ee ay Soomaalidu dagto. Waxaa magaaladaasi ay 90km u jirtaa magaalada B/weyne oo dhanka Soomaaliya ah.
 magalada mustaxiil waxaa  hoos imada  tuuloyin faradan.
-waa magaalo aad u qeyrat badan waxaa dhexmaro wabiga [[shabeele]].
-magalada waxaa dago qabiilkala la yiraadhdo jidle. Magaalada Mustaxiil oo aan aad uga fogayn Feer-Feer ama u dhaxaysa Magaalada Qalaafe iyo Feer-Feer. Sidoo kale Mustaxiil waxay ka tirsan tahay Gobalka Godey waana magaalo nasiib u yeelatay inuu maro Webiga dheer ee Shabeelle. [[Juqraafi]] ahaan waxay dhacaysaa Koonfur-Bari markii aad joogto Godey ama Qalaafe.
+waa magaalo aad u qeyrat badan waxaa dhexmaro [[Webiga shabeelle]].
+magalada waxaa dago qabiilkala la yiraadhdo jidle. Magaalada Mustaxiil oo aan aad uga fogayn Feer-Feer ama u dhaxaysa Magaalada Qalaafe iyo Feer-Feer. Sidoo kale Mustaxiil waxay ka tirsan tahay Gobalka Godey waana magaalo nasiib u yeelatay inuu maro Webiga dheer ee Shabeelle. [[Juquraafi]] ahaan waxay dhacaysaa Koonfur-Bari markii aad joogto Godey ama Qalaafe.
 
 Waxaa kalo magaalada mara jid cadaha weyn ee jayga ah ee magaalooyinka deegaanka intooda badan dhex mara, sida aad wadada jayga u hayso waxaad gaadhi buundada quruxda badan ee sida fiican loo dhisay, isla markaasba waxaad hoos ugu fooraar sani Magaalaaa qadiimka ah ee Mustaxiil oo qiyaatee caasimada Ogaadeeniya (Godey) ujirta 180km kana xigta dhinaca Koonfur-Bari aadna uguma soo fogo xuduudka soomaaliya oo dadka ganacsatada ah dhaqdhaqaaqoodu inta badan ku xiran yahay.
 
