--- a/Khamiis.mw
+++ b/Khamiis.mw
@@ -7,6 +7,7 @@ luqada Ingiriiska waxaa laguyiraahdaa Thursday, mida Finnishakana torstai
 
 [[af:Donderdag]]
 [[als:Donnerstag]]
+[[am:ሐሙስ]]
 [[ang:Þunresdæg]]
 [[ar:خميس]]
 [[ast:Xueves]]
