--- a/Gabay.mw
+++ b/Gabay.mw
@@ -564,7 +564,7 @@ Ma Dad Aad Laxididaad Ka Helin Dunida Guudkeeda
 
 =='''Salaan carrabey'''==
 
-Halkan waxa aan ku soo ururiyey tixo ka mid ah intii aannu ka heli karayney, maansaddii murtida iyo xigmadda badnayd ee abwaan Salaan Maxamed Maxamuud Xirsi oo [[Salaan-Carrabey]]ku magac dheeraa, oo badhtamaha qarnigii tegey (1943) ku geeriyoodey nawaaxiga gobolka Togdheer, isaga oo da’ ah. Salaan-carrabey wuxuu ahaa hormuudka maansooleyda qarnigii labaatannaad. Wuxuu ahaa horkacayaashii hoggaanka u hayey silsiladdii Guba ee badhtamaha qarnigii galbaday ka curatay degaanno ka mid ah dhulalka Soomaalidu degto. Salaan-carrabey wuxuu safka hore kaga jiray suugaanyahankii tixdoodu mudh-baxday, kuwii ugu murtida iyo xigmadda badnaa, wuxuuna ahaa haldoor tixdiisa si ba’an looga jeclaa degaamada soomaalidu degto oo dhan, aadna loo danayn jirey, laguna dhegey dheegag ka mid ah tixdiisa, oo ay mid yihiin, “nin dhirbaaxo quudheed dugsadey dhaqayadeed maalye, dhashaaday sugtaa xaajadaad dhowrataa abide, dhadhan malaha aadmigu wuxuu kugu dhaliilaaye” iyo “xubin rag isku waajahay hadday xayga ka caddaato, afku wuxuu la xoog yahay magliga xawda kaa jara”. Salaan-
+Halkan waxa aan ku soo ururiyey tixo ka mid ah intii aannu ka heli karayney, maansaddii murtida iyo xigmadda badnayd ee abwaan Salaan Maxamed Maxamuud Xirsi oo [[Salaan-Carrabey]]ku magac dheeraa, oo badhtamaha qarnigii tegey (1943) ku geeriyoodey nawaaxiga gobolka Togdheer, isaga oo da’ ah. Salaan-carrabey wuxuu ahaa hormuudka maansooleyda qarnigii labaatannaad. Wuxuu ahaa horkacayaashii hoggaanka u hayey silsiladdii Guba ee badhtamaha qarnigii galbaday ka curatay degaanno ka mid ah dhulalka Soomaalidu degto. Salaan-carrabey wuxuu safka hore kaga jiray suugaanyahankii tixdoodu mudh-baxday, kuwii ugu murtida iyo xigmadda badnaa, wuxuuna ahaa haldoor tixdiisa si ba’an looga jeclaa degaamada soomaalidu degto oo dhan, aadna loo danayn jirey, laguna dhegey dheegag ka mid ah tixdiisa, oo ay mid yihiin, “Haadaaqsi gabay waaya dheer haansa ma lahayne,Hiirtaanyo godobtaan ku nacay hibashadiisiiye,Hawaala warran mooyee si kale wawga haayiraye” iyo “xubin rag isku waajahay hadday xayga ka caddaato, afku wuxuu la xoog yahay magliga xawda kaa jara”. Salaan-
 carrabey wuxu tiriyey suugaan badan o ku saabsan dhex dhexaadin, nabaddayn, baanis iyo difaacid iyo weerar, intaba isugu jirta.  Abwaanku wuxuu ahaa suugaanyahankii ugu horreeyey ee laba col oo is hor fadhiya tix nabaddayn ah ku kala dareeeriyey. 
 
 
@@ -698,7 +698,6 @@ Oo muxubbooday hadhkiiyoo
 Milicdii hadhsan weydey
 Mahwigii------Muusanaabahayaa
 Kolla lay maqlihayne.
-
 
 =='''Hadraawi'''==
 
