روبوت  تعديل: [[arc:ܕܢܡܪܩ]]

--- a/Denimarki.mw
+++ b/Denimarki.mw
@@ -10,7 +10,7 @@
 [[an:Dinamarca]]
 [[ang:Denemearc]]
 [[ar:دانمارك]]
-[[arc:ܕܢܡܪܟ]]
+[[arc:ܕܢܡܪܩ]]
 [[ast:Dinamarca]]
 [[az:Danimarka]]
 [[bar:Dänemark]]
