--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -1,4 +1,4 @@
-:'''Ra'iisul wasaarayaahii soomaray dalka [[Soomaaliya]].'''
+:'''Ra'iisul wasaarayaashii soomaray dalka [[Soomaaliya]].'''
 <gallery>
 Image:Cabdullaahi_Ciise.jpg‎|<center>[[Cabdullaahi Ciise]]</br> [[1949]] - [[1960]]</center>
 </gallery>
@@ -8,6 +8,7 @@ Image:Cabdullaahi_Ciise.jpg‎|<center>[[Cabdullaahi Ciise]]</br> [[1949]] - [[1
 
 [[Category:Siyaasada Soomaaliya]]
 [[Category:Soomaaliya]]
+[[Category:Shaqsiyadaad]]
 
 [[de:Liste der Premierminister Somalias]]
 [[en:Prime Minister of Somalia]]
