--- a/Nuur_Cade.mw
+++ b/Nuur_Cade.mw
@@ -1,5 +1,48 @@
-'''Nuur Xasan Xuseen''', loona yaqaano '''Nuur Cadde''', ayaa waxaa loo magacaabay raysalwasaaraha [[Soomaaliya]] tariikhda markay ahayd [[Nofeembar]] [[2007]].
+{| class="infobox" style="font-size: 95%; text-align: left;"
+|-
+|-
+{{#if: |
+{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[Image:|200px]]<br>{{{caption|}}}}}
+| colspan="2" style="font-size: larger; text-align: center;" | '''Nuur Xasan Xuseen'''<br>
+[[Image:Nuur Xasan Xuseen.jpg|250px]]
+|-
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Ra'iisul wasaaraha [[Soomaliya]]
+|-
+! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
+|-
+|-
+| colspan="2" style="text-align: center;" | 24 [[Nofeembar]], [[2007]] ilaa '''Hada'''
+|-
+! Xil kalawareeg:
+| [[Saalim Caliyow Ibrow]].
+<!--|-
+! Xil ku wareejin
+| [[]].-->
+|-
+<!--! Dhashay:
+| 15 [[Diseembar]] [[1934]]-->
+<!--|-
+! Ku dhashay:
+|[[Gaalkacyo]], [[Soomaaliya]]-->
+<!--|-
+! Dhintay:
+| [[]] [[]]-->
+<!--|-
+! Kudhintay:
+| [[]], [[]]-->
+|-
+! Diintiisa:
+| [[Islaam]]
+|-
+! Dhalasho:
+| '''{{{3|[[Image:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
+|-
+|}
 
+'''Nuur Xasan Xuseen''', loona yaqaano '''Nuur Cadde''', ayaa waxaa loo magacaabay Ra'iisul wasaaraha [[Soomaaliya]] tariikhda markay ahayd [[Nofeembar]] [[2007]].
+
+[[Category:Siyaasada Soomaaliya]]
+[[Category:Shaqsiyadaad]]
 [[Category:Soomaaliya]]
 
 [[de:Nur Hassan Hussein]]
