link to Ra'iisul wasaarayaashi Soomaaliya

--- a/Nuur_Cade.mw
+++ b/Nuur_Cade.mw
@@ -6,7 +6,7 @@
 | colspan="2" style="font-size: larger; text-align: center;" | '''Nuur Xasan Xuseen'''<br>
 [[Image:Nuur Xasan Xuseen.jpg|250px]]
 |-
-! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Ra'iisul wasaaraha [[Soomaliya]]
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" | [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisul wasaaraha Soomaaliya]]
 |-
 ! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
