Image:Nuur Xasan Xuseen.jpg|<center>[[Nuur Xasan Xuseen]]</br> [[2007]] - '''Hada'''</center>

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -1,6 +1,7 @@
 :'''Ra'iisul wasaarayaashii soomaray dalka [[Soomaaliya]].'''
 <gallery>
 Image:Cabdullaahi_Ciise.jpg‎|<center>[[Cabdullaahi Ciise]]</br> [[1949]] - [[1960]]</center>
+Image:Nuur Xasan Xuseen.jpg|<center>[[Nuur Xasan Xuseen]]</br> [[2007]] - '''Hada'''</center>
 </gallery>
 
 ==Waxa raaca==
