[[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisul wasaarahii 1aad ee Soomaliya]]

--- a/Cabdullaahi_Ciise.mw
+++ b/Cabdullaahi_Ciise.mw
@@ -6,7 +6,7 @@
 | colspan="2" style="font-size: larger; text-align: center;" | '''Cabdullaahi Ciise Maxamuud'''<br>
 [[Image:Cabdullaahi_Ciise.jpg|220px]]
 |-
-! colspan="2" style="background-color: #cae1ff; text-align: center;" | Ra'iisul wasaarahii 1aad ee [[Soomaliya]]
+! colspan="2" style="background-color: #cae1ff; text-align: center;" | [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisul wasaarahii 1aad ee Soomaliya]]
 |-
 ! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
