[[Madaxweyneyaashii Soomaaliya| Madaxwaynihii 1aad ee Soomaliya]]

--- a/Aadan_Daar.mw
+++ b/Aadan_Daar.mw
@@ -6,7 +6,7 @@
 | colspan="2" style="font-size: larger; text-align: center;" | '''Aadan Cabdulle Cusmaan''' <br> ''Aadan cadde''
 [[Image:Aadan_Cade.jpg|220px]]
 |-
-! colspan="2" style="background-color: #cae1ff; text-align: center;" | Madaxwaynihii 1aad ee [[Soomaliya]]
+! colspan="2" style="background-color: #cae1ff; text-align: center;" | [[Madaxweyneyaashii Soomaaliya| Madaxwaynihii 1aad ee Soomaliya]]
 |-
 ! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
