[[Madaxweyneyaashii Soomaaliya|Madaxwaynihii 6aad ee Soomaliya]]

--- a/Xuseen_Caydiid.mw
+++ b/Xuseen_Caydiid.mw
@@ -6,7 +6,7 @@
 | colspan="2" style="font-size: larger; text-align: center;" | '''Xuseen Maxamed Faarax Caydiid'''<br>
 [[Image:Xuseen_Caydiid.jpg|250px]]
 |-
-! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Madaxwaynihii 6aad ee [[Soomaliya]]
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" | [[Madaxweyneyaashii Soomaaliya|Madaxwaynihii 6aad ee Soomaliya]]
 |-
 ! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
