[[Madaxweyneyaashii Soomaaliya|Madaxwaynaha Soomaliya]]

--- a/Cabdullaahi_Yuusuf.mw
+++ b/Cabdullaahi_Yuusuf.mw
@@ -6,7 +6,7 @@
 | colspan="2" style="font-size: larger; text-align: center;" | '''Cabdullaahi Yuusuf Axmed'''<br>
 [[Image:Abdullahi_Yusuf_Ahmed.jpg|250px]]
 |-
-! colspan="2" style="background-color: #c1cdc1; text-align: center;" | Madaxwaynaha [[Soomaliya]]
+! colspan="2" style="background-color: #c1cdc1; text-align: center;" |  [[Madaxweyneyaashii Soomaaliya|Madaxwaynaha Soomaliya]]
 |-
 ! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
