--- a/Category:Teleefishinka.mw
+++ b/Category:Teleefishinka.mw
@@ -1,5 +1,9 @@
 Teleefishinka dayaxgacmeedka ee ku hadla afka soomaaliga ayaa waxaa laga helikaraa mowjadan hoos ku qoran.
 
+Waxaa ka hadla koox yar oo Daarood ah oo la soo kireystay sida kuwa BBC-da iwm oo Dhaqan Celis oo af Soomaaliga calaaliya, hadalkana ku tunta!
+
+Wallee Booli Qaran wax ma barto meel ay joogaanba ee wax bilaash ah ayuun bay raadinayaan!
+
 {| border="1" class="wikitable" 
 |- 
 ! Channel || Satellite ||Orbit || Frequency || SR FEC || Mode || Beam
