روبوت  إضافة: [[ln:Catégorie:Lombú]]

--- a/Category:Badaha.mw
+++ b/Category:Badaha.mw
@@ -38,6 +38,7 @@
 [[kw:Category:Moryow ha keynvoryow]]
 [[la:Categoria:Mare]]
 [[lb:Kategorie:Mierer]]
+[[ln:Catégorie:Lombú]]
 [[lt:Kategorija:Jūros]]
 [[lv:Kategorija:Jūras]]
 [[ms:Kategori:Laut]]
