--- a/Turki.mw
+++ b/Turki.mw
@@ -1,6 +1,36 @@
-[[Image:LocationTurkey.svg|thumb|Turkki]]
-== Wadanka Turkki ==
-Wadanka Turkki waa wadan weyn oo ku yaala qaarada [[aasiya]] iyo [[Qaaradaha|qaarada]] [[yurub]].
+{{Dalalka
+|native_name                   = '''Türkiye Cumhuriyeti'''
+|conventional_long_name        = 
+|common_name                   = Turki
+|qaarada                       = [[Aasiya]]
+|sawir_calan                   = Flag of Turkey.svg
+|sawir_qaran                   = Türkiye arması.svg
+|astaan_calan                  = İstiklâl Marşı
+|image_map                     = Map of the Republic of Turkey.png
+|caasimada                     = [[Ankara]]
+|luuqadaha                     = [[Af-Turkish]]
+|dowlada                       = &nbsp;
+|darajo_hogaamiye1             = [[Madaxweyneyaashii Turki| Madaxweyne]]
+|darajo_hogaamiye2             = [[Ra'iisul wasaarayaahii Turki| Ra'iisul wasaare]] 
+|magac_hogaamiye1              = [[Cabbdallah Gül]]
+|magac_hogaamiye2              = [[Rajab dhayib Urdookhan]]
+|sovereignty_type              = 
+|sovereignty_note              = 
+|established_event1            = 
+|established_date1             = 
+|area                          = 783,562 
+|areami²                       = 302,535 
+|biyo                          = 1.3
+|population_estimate           = 70,586,256
+|population_estimate_year      = 2008
+|lacagta                       = [[Turkish Lira]]
+|wakhti                        = [[UTC]]
+|furaha_debeda		       = 90
+|footnote1                     = 
+|footnote2                     = 
+}}
+
+Wadanka '''Turkki''' waa wadan weyn oo ku yaala qaarada [[aasiya]] iyo [[Qaaradaha|qaarada]] [[yurub]].
 
 [[Category:Wadamada Aasiya]]
 [[Category:Dowladaha Aasiya]]
