--- a/Turki.mw
+++ b/Turki.mw
@@ -1,6 +1,6 @@
 {{Dalalka
-|native_name                   = '''Türkiye Cumhuriyeti'''
-|conventional_long_name        = 
+|native_name                   = '''Türkiye Cumhuriyeti'''</br>''Republic of Turkey''
+|conventional_long_name        = ''Turki''
 |common_name                   = Turki
 |qaarada                       = [[Aasiya]]
 |sawir_calan                   = Flag of Turkey.svg
