*Empty MediaWiki Message*

--- a/Burris.mw
+++ b/Burris.mw
@@ -1,4 +1,7 @@
-'''Burris''', '''Dubbe'''.
+[[File:Claw-hammer.jpg|thumb]]
+'''Burris''' ama '''Burus''' ,waa shay madaxa ka culus oo badanaa ka sameysan bir  oo loo isticmaalo in [[musbaar]] lagu garaaco ama shay lagu burburiyo.
+waxaa jiro noocyo kala duwan oo burus ah, oo kala culus. 
+
 
 {{Commonscat|Hammers}}
 
