--- a/Luuq_Jeelow.mw
+++ b/Luuq_Jeelow.mw
@@ -1,1 +1,4 @@
-Degmada jawiil waa  degmo can ah Luna taala meel istiraatiiji ah kaasoo isku xira gobolada soomaaliya.
+'''Luuqjeelow'''  waa Tuulo ku taalo gobolka [[Hiiraan]].
+
+{{Gumud}}
+{{Degmooyinka Gobolka Hiiraan}}
