*Empty MediaWiki Message*

--- a/Canab.mw
+++ b/Canab.mw
@@ -1,7 +1,25 @@
 [[File:Vineyard in Montone.jpg|thumb|Canab]]
 
-'''Canab'''
+'''Canab''' waa miro la cuni karo oo leh madabo kala duwan sida buluug,madow, gaduud iyo cagaar.
+canabka wuxuu ka dhashtaa geed la yiraahdo geed canab (Vitis), oo ka boxo koonfurta yurub iyo koonfurta galbeed ee aasiya.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 {{Commonscat|Grapes}}
-
+{{gumud}}
 [[Category:Bayoloji]]
