*Empty MediaWiki Message*

--- a/Bookh.mw
+++ b/Bookh.mw
@@ -1,6 +1,20 @@
-Bookh waa degmo oo [[Baharsame]] iyo [[Qayaad]] ah, oo ku jira gobolka Doollo. Tuulooyinka Bookh waxaa ka mid ah:
+'''Bookh''' waa degmo ku ku taalo gobolka [[Doollo]] ee dalka [[Itoobiya]]. Tuulooyinka u dhow degmada Bookh waxaa ka mid ah:
 
 *[[Docmo]]
 *[[Gumburka Cagaare]]
 
-[[category:Dhulbahante]]
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{gumud}}
+[[category:Doollo]]
