*Empty MediaWiki Message*

--- a/Dadka_gaagaaban.mw
+++ b/Dadka_gaagaaban.mw
@@ -1,3 +1,19 @@
-yarisow (af-ingiriis: midget ama dwarfism) waa qof oo aad u yar.
+'''Dadka gaagaaban''' (af-ingiriis: midget ama dwarfism) waa qof ku dhashtay cudurka loo yaqaan achondroplasi oo dhirirkiisu ka yareenaayo 147 cm.
+Dad waxaa jiro oo gaagaaban oo cudurkaas aan ku dhalan sida [[dadka Pygmy]]  oo dherirkoodu ka yaryahay 150cm oo ku kala nool dalal dhowr ah oo aduunka ku yaal, gaar ahaan afrika..
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 [[category:cudur]]
