*Empty MediaWiki Message*

--- a/Ceerigaabo.mw
+++ b/Ceerigaabo.mw
@@ -1,51 +1,78 @@
+{{Infobox settlement
+|official_name          =Ceerigaabo
+|other_name             =عيرجافو
+|native_name            =<small>''Erigavo''</small>
+|nickname               = 
+|settlement_type        =Magaalo
+|motto                  =
+|image_skyline          =
+|imagesize              =250px
+|image_caption          =Muuqaalka Ceerigaabo.
+|image_flag             = 
+|flag_size              =
+|image_seal             = 
+|seal_size              =
+|image_map              = 
+|mapsize                = 
+|map_caption            = 
+|pushpin_map            =Somaliland
+|pushpin_label_position =bottom
+|pushpin_mapsize        =
+|pushpin_map_caption    =Waxay Soomaaliland kaga taalaa.
+|coordinates_display    =inline,title
+|coordinates_region     =SO-SA
+|subdivision_type       =Dalka
+|subdivision_name       ={{flag|Somaliland}}
+|subdivision_type1      =[[Gobol]]
+|subdivision_name1      =[[Sanaag]]
+|subdivision_type2      =[[Degmo]]
+|subdivision_name2      =[[Degmada Ceerigaabo|Ceerigaabo]]
+|leader_title           =Duqa
+|leader_name            =Ismaaciil Xaajji Nuur Faarax
+|established_title      =  
+|established_date       = 
+|area_magnitude         = 
+|unit_pref              =Metric 
+|area_footnotes         =
+|area_total_km2         =
+|area_land_km2          = 
+|population_as_of       = 
+|population_footnotes   =
+|population_note        =
+|population_total       =320,000
+|population_density_km2 =
+|timezone               =[[Saacadda Afrikada Bari|EAT]]
+|utc_offset             =+3
+|timezone_DST           =  
+|utc_offset_DST         = 
+|latd=10|latm=37|lats=05|latNS=N
+|longd=47|longm=22|longs=12|longEW=E
+|elevation_footnotes    = 
+|elevation_m            = 
+|elevation_ft           = 
+|postal_code_type       = 
+|postal_code            =
+|area_code              =
+|blank_name             =
+|blank_info             =
+|website                = 
+|footnotes              = 
+}}
+'''Ceerigaabo''' ({{lang-en|Erigavo}}; {{lang-ar|إرجفو}}) waa caasimada gobolka [[Sanaag|Gobolka Sanaag]] waxayna ku taalaa dalka [[Somaliland]]. Magaaladaan waxaa degan dad lagu qiyaaso 320,000 oo qof. 
 
+Ceerigaabo waa magaalo ka mid ah magaloyinka ugu waweyn Somaliland, ceerigaabo waxay ku taalo meel aad u qurux badan ama deegaanka ay ceerigaabo kutaalaa waa deegaan aad u qurxoon, waana dhul aad u qabaw marka loo eego cimilada gobolada somaliland. Sida aynu wada ogsonahay waxa magalada ceerigaabo masafo aan dheerayn u jirta buurta caanka ah ee [[Buurta Daalo|Daalo]] iyo Surud, burahasi oo ah buuraha dalxiiska loo tago ee Somaliland uguna dhadheer. Sidoo kale DOOXADA  '''[[Dagaar]]''' oo kamida meelaha ugu quruxda badan somaliland kuna taala konfurta ceerigaabo
+Magalada Ceerigaabo ee gobolka sanaag ayaa ku caan baxday bilicsami iyo cagaar.
 
-Erigavo
+==qabiilka degan==
+Magaladan oo ay wada degaan bulsho badan oo Somaali ahi. Sida la wada ogyahay Magalada ceerigaabo iyo dadkeeduba waxay aad u jecelyihiin nabada.magalda qabiilada dega waa 6 beelod 1- '''[[Habarjeclo]]''' 2-'''[[habaryoonis]]'''  3- '''Ogayslabe'''  4-'''[[dhulbahante]]''' 5- '''[[warsangali]]''' 6-Gahayle   inta badan magalada gudaheeda ama xafadaheda iyo baadiyaha u dhow marka loga kaco afarta dhinacba.
 
-
-
-
-[[File:Erigavo2.jpg|thumb|left|Pathway in old Erigavo.]]
-
-
-
-
-
-
-Erigavo (Somali: Ceerigaabo), oo sidoo kale loo yaqaan 'Erigabo, waa caasimadda iyo magaalada ugu weyn ee gobolka Sanaag ee [[maakhir]].Qalabka Erigavo waa dhowr sano jir. Deegaanka ku hareeraysan iyo magaalada ayaa lagu soo warramey in ay dhistay Madigan Dir. [2] Waxay ku dhowaad 180km u jirta Badhan oo ah magaalada saddexaad ee ugu weyn gobolka oo ah bariga, Goobta guud waxaa lagu xusay xabsiyadii taariikhiga ah ee tiro badan, oo ah aabayaashii Soomaaliga ee kala duwanaa lagu aasay. Ilaa 2013, Erigavo waa caasimadda maamulka ee waqooyiga Sanaag. Sidoo kale waa xarunta bartamaha degmada Erigavo. Erigavo wuxuu ahaa magaalo ku taal waddada Isaaq ee ganacsiga inta lagu guda jiro qarniyadii dhexe.
-Sidoo kale waa meesha qabiilka Musseeel ee qabiilka Habar Yoonis lagu aasay.
-
-
-
-
-
-{| class="wikitable"
-|-
-! GDP!! 2015 !! 2016!! 2017 !! 2018 !! 2019
-|-
-| - ||  $120M ||  $145M ||  $155 || $200 ||  $230M
-|-M- Million dollar 
-|
-|}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-==Sido kale fiiri==
+==Sidoo kale fiiri==
+*[[Liiska magaalooyinka Soomaaliya]]
+*[[Sanaag|Gobolka Sanaag]]
+==Tixraac==
+{{reflist}}
+{{Magaalooyinka Gobolka Sanaag}}
+{{gumud}}
+[[Category:Soomaaliya]]
+[[Category:Magaalooyinka Soomaaliya]]
+[[Category:Sanaag]]
