--- a/Geeska_afrika.mw
+++ b/Geeska_afrika.mw
@@ -27,11 +27,11 @@
 |data13 = [[Af-Cafari|Cafari]], [[Amxaari]], [[Carabi]], [[Af-Oromo|Oromo]], [[Af-Soomaali|Soomaali]], [[Af-Tigre|Tigre]], [[Af-Tigrinya|Tigrinya]].
 |label14 = Magaalo ee ugu waaweyn
 |data14 = <br />{{nowrap|[[Jabuuti (magaalo)|Jabuuti]],&nbsp;Jabuuti}}<br />[[Asmara]],&nbsp;Eratareya<br />[[Addis Abeba]],&nbsp;Itoobiya<br />[[Muqdisho]],&nbsp;Soomaaliya
-}}Faanka Afrika, oo si kalo loo yaqaano '''Foolalka Afrika''' ama '''Dhulbaxsinta Afrika''' ama '''Gacandhulka Afrika''' waa [[qaaradhoosaad]]ka oo geeska  Afrika ku yaal oo dhex gala [[Marinka Gardafuul]]. Af-ingiriis waxaa loo yaqaana '''Horn of Africa'''. Qarnigii 19kii, waxaa Hornka badhkeeda waxaa qabsaday abaanduulkii guud ee [[Darwiish]] ee [[Ismaaciil Mire]] la yidhaahdo.
+}}
+Geeska afrika, waa dhul sadaxgees ah oo ku taalo jasiiro dhuleedka soomaaliyeed ee bariga afrika. waxay ka kooban tahay dalalka [[Soomaaliya]], [[Itoobita]], [[Jabuuti]] iyo [[Eritrea]]<ref name="Joireman22">Sandra Fullerton Joireman, ''Institutional Change in the Horn of Africa'', (Universal-Publishers: 1997), p.1: "The Horn of Africa encompasses the countries of Ethiopia, Eritrea, Djibouti and Somalia. These countries share similar peoples, languages, and geographical endowments."</ref>
 
 ==Guud ahaan==
-[[File:Horn africa 1898.png|thumb|500px|Geeska Africa sanadka 1898]]
-Waxaa la isku dhahaa 4 dal oo kala ah: [[Soomaaliya]], [[Itoobiya]], [[Somaliland]], [[Jabuuti]], [[Eratareya]].Baaxada dhulka geeska Afrika waa 2,000,000 km² (772,200 sq mi), waxaana ku nool 100 milyan oo qof oo kala ah: (Soomaaliya: 10 milyan, Somaliland: 5 milyan, Jabuuti: 0.86 milyan, Itoobiya: 85 milyan iyo Erateriya: 5.2 milyan) oo qof.Dhulka loo yaqaano geeska afrika waxaa ku badan soomaalida marka loo fiiriyo qoomiyad ahaan, waa dhulka aan ugu yeerno soomaaliweyn maadaama ee ku hoos jiraan dalalka kala ah Itoobiya iyo kenya.Marka loo fiiriyo dad ahaan neh waxaa ku badan shacabka ku nool dalka [[Itoobiya]].
+Baaxada dhulka geeska Afrika waa 2,000,000 km² (772,200 sq mi), waxaana ku nool 100 milyan oo qof oo kala ah: (Soomaaliya: 15 milyan, Jabuuti: 0.86 milyan, Itoobiya: 85 milyan iyo Erateriya: 5.2 milyan) oo qof.Dhulka loo yaqaano geeska afrika waxaa ku badan soomaalida marka loo fiiriyo qoomiyad ahaan, waa dhulka aan ugu yeerno soomaaliweyn maadaama ee ku hoos jiraan dalalka kala ah Itoobiya iyo kenya.Marka loo fiiriyo dad ahaan neh waxaa ku badan shacabka ku nool dalka [[Itoobiya]].
 
 ==Sii eeg==
 *[[Afrika]]
@@ -91,4 +91,4 @@ Waxaa la isku dhahaa 4 dal oo kala ah: [[Soomaaliya]], [[Itoobiya]], [[Somalilan
 
 {{Gumud}}
 
-[[Category:Faanka Afrika]]
+[[Category:geeska afrika]]
