*Empty MediaWiki Message*

--- a/Biciide.mw
+++ b/Biciide.mw
@@ -1,7 +1,7 @@
 
 '''[[Ceerigaabo]]''' '''[[sanaag]]''',  Qabiilka '''BICIIDE''' ({{lang-en|BI'EEDA}}) waa mid kamida beelaha [[isaaq]] kuwa ugu badan gaar ahaan [[habar jeclo]].
 
-{{Infobox ethnic group|||group=|flag=[[File:Flag_of_Somaliland.svg|60px]][[File:Flag_of_Ethiopia.svg|60px]][[File:Flag_of_Kenya.svg|45px]]|image=|region1={{flagcountry|Somaliland}}|region2={{flagcountry|Ethiopia}}|region3={{flagcountry|Kenya}}|langs=[[Af Soomaali]],  [[Af Carabi]]|rels=[[Islam]] ([[Sunni Islam]])|related-c=[[Habar Awal]], [[Habar Yoonis]], iyo tolalka kalee ee beesha [[Isaaq]] <!-- CONFIRMED RELATIONS!!! -->|native_name=Axmed Faarax <br/> احمد فارح|native_name_lang=so|related_groups=}}
+{{Infobox ethnic group|||group=|flag=[[File:Flag_of_Somaliland.svg|60px]][[File:Flag_of_Ethiopia.svg|60px]][[File:Flag_of_Kenya.svg|45px]]|image=|region1={{flagcountry|Somaliland}}|region2={{flagcountry|Ethiopia}}|region3={{flagcountry|Kenya}}|langs=[[Af Soomaali]],  [[Af Carabi]]|rels=[[Islam]] ([[Sunni Islam]])|related-c=[[cali barre]], [[idarays muuse]], iyo tolalka kalee ee beesha [[muuse abokor]] <!-- CONFIRMED RELATIONS!!! -->|native_name=Axmed Faarax <br/> احمد فارح|native_name_lang=so|related_groups=}}
 
 
 
