*Empty MediaWiki Message*

--- a/Blackpink.mw
+++ b/Blackpink.mw
@@ -31,17 +31,11 @@
 
 == xubnaha ==
 
-*Kim Ji-soo (waxay dhalatay [[Janaayo|Janaayo 3]], [[1995]]), oo si caan ah loogu yaqaanay Jisoo (oo loo yaqaan Ji Soo), waa South Korea [[Fanaan]], xubinna ka ah kooxda gabdhaha [[Blackpink]] ee hoos yimaada [[YG Entertainment]].<ref>{{cite web|url=https://news.joins.com/article/23258407|title=제니, 카이와 열애설 후 첫 SNS 게시 "지수 언니 생일 축하"|publisher=JoongAng Ilbo|date=2019-01-03|language=ko|accessdate=2020-03-07}}</ref>|birth_place=[[Gunpo]], [[Gyeonggi Province]], [[South Korea]]|occupation=* fanann
-* jilaa<ref>{{cite news|url=https://www.billboard.com/articles/columns/pop/8481273/blackpink-interscope-records-umg-global-deal-yg-entertainment|title=BLACKPINK Sign With Interscope Records & UMG in Global Partnership With YG Entertainment: Exclusive|work=[[Billboard (magazine)|Billboard]]|date=October 22, 2018|access-date=November 23, 2018|last=Herman|first=Tamar}}</ref>
-*Jennie Kim (Kuuriyaan: 김제 니; (oo dhalatay Janaayo 16, 1996), oo si fiican loogu yaqaanay magaca '''Jennie''', waa south korea fanaan, Waxay ka doodday inay xubin ka tahay kooxda gabdhaha YG Entertainment ee [[Blackpink]] bishii Agoosto 2016.
+* [[Jisoo]]
+* [[Jennie]]
+* [[Rosé]]
+* [[Lisa]]
 
-
-
-*
-*Lalisa Manoban ([[Tayland|Thai]]: ลลิษา มโนบาล;; waxay dhalatay bishii Maarj 27, 1997), magaceeda saxda ah waa '''Pranpriya Manoban''', waxaa sifiican u yaqaana halyeeyga Lisa ([[Hangul]]: 리사), waa cunsuri u dhashay [[Tayland|Thai]] iyo heesaha fadhigoodu yahay south korea , Waxay caan ku tahay inay xubin ka tahay south korea' kooxda gabdhaha [[Blackpink]] oo uu sameeyay YG Entertainment .
-
-*
-*'''Roseanne Park''' (waxay dhalatay 11-kii Febraayo 1997), oo si fiican loogu yaqaanay magaceeda la yiraahdo Rosé (Kuuriyaan: 로제), waa south korean-[[New Zealand]] fanaan Rosé wuxuu la saxeexan yahay sumadda YG Entertainment oo xisaab hubin ku sameeyay sanadkii 2012, Waxay ugu dambeyntii sameysay kulankeedii ugu horreeyay iyada oo ah cod-weyne ka tirsan kooxda gabdhaha ee [[Blackpink]] bishii Agoosto 2016, Waxay marka hore u soo bandhigtay inay tahay fanaaniin kali ah oo ka mid ah heesaha [[G-Dragon]] ee "la'aanteed " (Without you), Waxay sidoo kale caan ku tahay "south korea's lead vocal" sababtoo ah codkeeda oo quruxda badan.
 
 
 == Tixraacyada ==
