*Empty MediaWiki Message*

--- a/Blackpink.mw
+++ b/Blackpink.mw
@@ -8,17 +8,22 @@
 | image            = 20190106 (NEWSEN) 블랙핑크 (BLACKPINK), 수줍은 많은 소녀지만 돋보이는 아름다운 미모 (Golden Disc Awards 2019) (2).jpg
 | landscape        = yes
 | alt              = 
-| caption          = Blackpink in 2019<br /> From left to right: Rosé, Jennie, Lisa, and Jisoo
-| origin           = [[Seoul]], South Korea
-| genre            = {{hlist|[[K-pop]]|[[Electronic dance music|EDM]]|[[Hip hop music|hip hop]]|[[J-pop]]}}
+| caption          = Blackpink sanadka 2019<br /> Bidix ilaa midig: Rosé, Jennie, Lisa, iyo Jisoo
+| origin           = [[Seoul]], kuuriyada koonfureed
+| genre            = *K-pop
+*Electronic dance music
+*Hip hop music
+*J-pop
 | years_active     = {{start date|2016}}–ilaa hadda
-| label            = {{hlist|[[YG Entertainment|YG]]|[[YGEX]]|[[Interscope Records|Interscope]]}}
+| label            = *YG Entertainment
+*YGEX
+*Interscope Records
 | associated_acts  = [[YG Family]]
 | website          = {{hlist|{{URL|blackpinkofficial.com|Korean}}|{{URL|ygex.jp/blackpink/|Japanese}}}}
-| current_members  = * [[Jisoo (singer, born 1995)|Jisoo]]
-* [[Jennie (singer)|Jennie]]
-* [[Rosé (singer)|Rosé]]
-* [[Lisa (rapper)|Lisa]]
+| current_members  = * [[Jisoo]]
+* [[Jennie]]
+* [[Rosé]]
+* [[Lisa]]
 }}
 '''Blackpink''' ([[Hangul]]: 블랙 핑크; loo habeeyey sida BLACKPINK ama BLΛƆKPIИK) waa koox ka kooban 4 gabdhood oo xubno ka ah oo u dhashay kuuriyada koonfureed oo ay samaysatay [[YG Entertainment]], affarta xubnood waxay kala yihiin [[Jisoo]], [[Jennie]], [[Rosé]], iyo [[Lisa]].  Kooxdu ayaa ka dooday albumka ''Square One''  8-dii [[Agoosto]], [[2016]], kaas oo blackpink siiyay heeskoodi ugu horeeyay "''Whistle''", singlekaa ayaa sidoo kale ka mid ahaa heesta "Boombayah," oo ah heestoodi ugu horeesay oo ku jirta liiska ugu sareeya ee [[Billboard World Digital]], kaas oo dhigay rekoorka midka ugu daawashada badan ee uu soo saaray farshaxan u dhashay kuuriyada koonfureed. guushii ugu horreysay ee kooxdu ay ka gaadhay ganacsiga, waxaa loogu ammaanayaa inay yihiin Fannaaniinta Fanka ee Sannadka cusub markii la gaadho abaalmarinnada 31aad ee dahabiga ah ee loo yaqaan '[[golden Disc Awards]] iyo 26th [[Seoul Music Awards]].
 
